--- a/index.html
+++ b/index.html
@@ -44,20 +44,9 @@
             <div class="job">
                 <h4>Software Engineer</h4>
                 <p>Daviscomms</p>
-                <p>May 2019 - May 2022 (3 years 1 month)</p>
-            </div>
-        </section>
-        <section class="education">
-            <h3>Education</h3>
-            <div class="degree">
-                <h4>Bachelor's degree, Information Technology</h4>
-                <p>James Cook University Singapore</p>
-                <p>2016 - 2018</p>
+                <p>May 2019 - May 2022</p>
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Myint Myat Yadanar Khaing. All rights reserved.</p>
-    </footer>
 </body>
 </html>
